--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ public
 themes/burns-exhibits/node_modules/
 yarn-error.log
 resources/_gen
+content/Genius-of-Genre-Flann-O'Brien/Manufacturing-Countenance.m4v
