--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Burns Online Exhibits"
 theme = "burns-exhibits"
 googleAnalytics = "UA-123-45"
 relativeURLs = true
